# KaitoTokyo-SimpleJsonReader

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/agents/: bump-version.md
.github/workflows/: check.yml  library.yml
include/KaitoTokyo/SimpleJsonReader/: SimpleJsonReader.hpp  SimpleJsonReaderHelpers.hpp
tests/: CMakeLists.txt  MalformedJson_test.cpp  MalformedJson_test.cpp.hpp  ReaderHelper_test.cpp  ReaderHelper_test.cpp.hpp  ValidJson_test.cpp  ValidJson_test.cpp.hpp  test_helper.hpp  update_tests.sh
