# SPDX-FileCopyrightText: 2026 Kaito Udagawa <umireon@kaito.tokyo>
#
# SPDX-License-Identifier: Apache-2.0

add_executable(ValidJson_test ValidJson_test.cpp)
target_link_libraries(ValidJson_test PRIVATE KaitoTokyo::SimpleJsonReader)
add_test(NAME emptyObject COMMAND ValidJson_test emptyObject)
add_test(NAME nestedStringsAndJsonPaths COMMAND ValidJson_test nestedStringsAndJsonPaths)
add_test(NAME variousLanguages COMMAND ValidJson_test variousLanguages)
add_test(NAME rootArray COMMAND ValidJson_test rootArray)
add_test(NAME rootString COMMAND ValidJson_test rootString)
add_test(NAME rootNumber COMMAND ValidJson_test rootNumber)
add_test(NAME rootTrue COMMAND ValidJson_test rootTrue)
add_test(NAME rootFalse COMMAND ValidJson_test rootFalse)
add_test(NAME rootNull COMMAND ValidJson_test rootNull)
add_test(NAME whitespaceAroundTokens COMMAND ValidJson_test whitespaceAroundTokens)
add_test(NAME quotesInStrings COMMAND ValidJson_test quotesInStrings)
add_test(NAME manyBackslashesBeforeQuote COMMAND ValidJson_test manyBackslashesBeforeQuote)

add_executable(MalformedJson_test MalformedJson_test.cpp)
target_link_libraries(MalformedJson_test PRIVATE KaitoTokyo::SimpleJsonReader)
add_test(NAME emptyString COMMAND MalformedJson_test emptyString)
add_test(NAME emptyInput COMMAND MalformedJson_test emptyInput)
add_test(NAME unterminatedString COMMAND MalformedJson_test unterminatedString)
add_test(NAME unterminatedObject COMMAND MalformedJson_test unterminatedObject)
add_test(NAME unterminatedArray COMMAND MalformedJson_test unterminatedArray)
add_test(NAME missingFieldDelimiter COMMAND MalformedJson_test missingFieldDelimiter)
add_test(NAME invalidTokenOrdering COMMAND MalformedJson_test invalidTokenOrdering)
add_test(NAME startEndElementsMixedAtRoot COMMAND MalformedJson_test startEndElementsMixedAtRoot)
add_test(NAME startEndElementsMixedInObject COMMAND MalformedJson_test startEndElementsMixedInObject)
add_test(NAME closeBracketWhereObjectValueShouldBe COMMAND MalformedJson_test closeBracketWhereObjectValueShouldBe)
add_test(NAME closeBraceWhereArrayValueShouldBe COMMAND MalformedJson_test closeBraceWhereArrayValueShouldBe)
add_test(NAME nestedStartEndChaos COMMAND MalformedJson_test nestedStartEndChaos)
add_test(NAME tooDeepArrayNesting COMMAND MalformedJson_test tooDeepArrayNesting)


add_executable(ReaderHelper_test ReaderHelper_test.cpp)
target_link_libraries(ReaderHelper_test PRIVATE KaitoTokyo::SimpleJsonReader)
add_test(NAME isStartObject COMMAND ReaderHelper_test isStartObject)
add_test(NAME isEndObject COMMAND ReaderHelper_test isEndObject)
add_test(NAME isStartArray COMMAND ReaderHelper_test isStartArray)
add_test(NAME isEndArray COMMAND ReaderHelper_test isEndArray)
add_test(NAME isKey COMMAND ReaderHelper_test isKey)
add_test(NAME isString COMMAND ReaderHelper_test isString)
add_test(NAME isNumber COMMAND ReaderHelper_test isNumber)
add_test(NAME isTrue COMMAND ReaderHelper_test isTrue)
add_test(NAME isFalse COMMAND ReaderHelper_test isFalse)
add_test(NAME isNull COMMAND ReaderHelper_test isNull)
add_test(NAME matchesPathPrefix_emptyPrefixAlwaysMatchEmptyPath COMMAND ReaderHelper_test matchesPathPrefix_emptyPrefixAlwaysMatchEmptyPath)
add_test(NAME matchesPathPrefix_emptyPrefixAlwaysMatchOneComponentPath COMMAND ReaderHelper_test matchesPathPrefix_emptyPrefixAlwaysMatchOneComponentPath)
add_test(NAME matchesPathPrefix_emptyPrefixAlwaysMatchTwoComponentsPath COMMAND ReaderHelper_test matchesPathPrefix_emptyPrefixAlwaysMatchTwoComponentsPath)
add_test(NAME matchesPathPrefix_stringPrefixCanMatchStringPath COMMAND ReaderHelper_test matchesPathPrefix_stringPrefixCanMatchStringPath)
add_test(NAME matchesPathPrefix_indexPrefixCanMatchIndexPath COMMAND ReaderHelper_test matchesPathPrefix_indexPrefixCanMatchIndexPath)
add_test(NAME matchesPathPrefix_indexPrefixNeverMatchStringPath COMMAND ReaderHelper_test matchesPathPrefix_indexPrefixNeverMatchStringPath)
add_test(NAME matchesPathPrefix_stringPrefixNeverMatchIndexPath COMMAND ReaderHelper_test matchesPathPrefix_stringPrefixNeverMatchIndexPath)
add_test(NAME matchesPathPrefix_stringAndIndexPrefixCanMatchStringAndIndexPath COMMAND ReaderHelper_test matchesPathPrefix_stringAndIndexPrefixCanMatchStringAndIndexPath)
add_test(NAME matchesPathPrefix_indexAndStringPrefixCanMatchIndexAndStringPath COMMAND ReaderHelper_test matchesPathPrefix_indexAndStringPrefixCanMatchIndexAndStringPath)
add_test(NAME matchesPathPrefix_OneComponentPrefixNeverMatchEmptyPath COMMAND ReaderHelper_test matchesPathPrefix_OneComponentPrefixNeverMatchEmptyPath)
add_test(NAME matchesPathPrefix_TwoComponentsPrefixNeverMatchOneComponentsPath COMMAND ReaderHelper_test matchesPathPrefix_TwoComponentsPrefixNeverMatchOneComponentsPath)
add_test(NAME matchesPathPrefix_initializerListOverload COMMAND ReaderHelper_test matchesPathPrefix_initializerListOverload)
add_test(NAME matchesExactPath_neverMatchIfLengthMismatch COMMAND ReaderHelper_test matchesExactPath_neverMatchIfLengthMismatch)
add_test(NAME matchesExactPath_matchesWhenLengthAndComponentsMatch COMMAND ReaderHelper_test matchesExactPath_matchesWhenLengthAndComponentsMatch)
add_test(NAME matchesExactPath_notMatchWhenLengthMatchesButComponentsNotMatch COMMAND ReaderHelper_test matchesExactPath_notMatchWhenLengthMatchesButComponentsNotMatch)
add_test(NAME matchesExactPath_initializerList COMMAND ReaderHelper_test matchesExactPath_initializerList)
add_test(NAME forEachPathComponent COMMAND ReaderHelper_test forEachPathComponent)
