# SPDX-FileCopyrightText: 2026 Kaito Udagawa <umireon@kaito.tokyo>
#
# SPDX-License-Identifier: Apache-2.0

foreach(sv IN ITEMS std c8)
    foreach(cxxstd IN ITEMS 17 20)
        add_executable(ValidJson_test_${sv}_${cxxstd} ValidJson_test.cpp)
        set_target_properties(ValidJson_test_${sv}_${cxxstd} PROPERTIES CXX_STANDARD ${cxxstd} CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)
        target_compile_options(ValidJson_test_${sv}_${cxxstd} PRIVATE -pedantic-errors -Wall -Wextra -Werror)
        target_link_libraries(ValidJson_test_${sv}_${cxxstd} PRIVATE KaitoTokyo::SimpleJsonReader)
        if(sv STREQUAL "std")
            target_compile_definitions(ValidJson_test_${sv}_${cxxstd} PRIVATE -DUSE_STD_STRING_VIEW)
        endif()
        add_test(NAME emptyObject_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} emptyObject)
        add_test(NAME nestedStringsAndJsonPaths_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} nestedStringsAndJsonPaths)
        add_test(NAME variousLanguages_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} variousLanguages)
        add_test(NAME rootArray_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} rootArray)
        add_test(NAME rootString_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} rootString)
        add_test(NAME rootNumber_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} rootNumber)
        add_test(NAME rootTrue_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} rootTrue)
        add_test(NAME rootFalse_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} rootFalse)
        add_test(NAME rootNull_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} rootNull)
        add_test(NAME whitespaceAroundTokens_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} whitespaceAroundTokens)
        add_test(NAME quotesInStrings_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} quotesInStrings)
        add_test(NAME manyBackslashesBeforeQuote_${sv}_${cxxstd} COMMAND ValidJson_test_${sv}_${cxxstd} manyBackslashesBeforeQuote)

        add_executable(MalformedJson_test_${sv}_${cxxstd} MalformedJson_test.cpp)
        set_target_properties(MalformedJson_test_${sv}_${cxxstd} PROPERTIES CXX_STANDARD ${cxxstd} CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)
        target_compile_options(MalformedJson_test_${sv}_${cxxstd} PRIVATE -pedantic-errors -Wall -Wextra -Werror)
        target_link_libraries(MalformedJson_test_${sv}_${cxxstd} PRIVATE KaitoTokyo::SimpleJsonReader)
        if(sv STREQUAL "std")
            target_compile_definitions(MalformedJson_test_${sv}_${cxxstd} PRIVATE -DUSE_STD_STRING_VIEW)
        endif()
        add_test(NAME emptyString_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} emptyString)
        add_test(NAME emptyInput_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} emptyInput)
        add_test(NAME unterminatedString_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} unterminatedString)
        add_test(NAME unterminatedObject_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} unterminatedObject)
        add_test(NAME unterminatedArray_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} unterminatedArray)
        add_test(NAME missingFieldDelimiter_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} missingFieldDelimiter)
        add_test(NAME invalidTokenOrdering_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} invalidTokenOrdering)
        add_test(NAME startEndElementsMixedAtRoot_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} startEndElementsMixedAtRoot)
        add_test(NAME startEndElementsMixedInObject_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} startEndElementsMixedInObject)
        add_test(NAME closeBracketWhereObjectValueShouldBe_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} closeBracketWhereObjectValueShouldBe)
        add_test(NAME closeBraceWhereArrayValueShouldBe_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} closeBraceWhereArrayValueShouldBe)
        add_test(NAME nestedStartEndChaos_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} nestedStartEndChaos)
        add_test(NAME tooDeepArrayNesting_${sv}_${cxxstd} COMMAND MalformedJson_test_${sv}_${cxxstd} tooDeepArrayNesting)
    endforeach()
endforeach()


# add_executable(ReaderHelper_test ReaderHelper_test.cpp)
# target_link_libraries(ReaderHelper_test PRIVATE KaitoTokyo::SimpleJsonReader)
# add_test(NAME isStartObject COMMAND ReaderHelper_test isStartObject)
# add_test(NAME isEndObject COMMAND ReaderHelper_test isEndObject)
# add_test(NAME isStartArray COMMAND ReaderHelper_test isStartArray)
# add_test(NAME isEndArray COMMAND ReaderHelper_test isEndArray)
# add_test(NAME isKey COMMAND ReaderHelper_test isKey)
# add_test(NAME isString COMMAND ReaderHelper_test isString)
# add_test(NAME isNumber COMMAND ReaderHelper_test isNumber)
# add_test(NAME isTrue COMMAND ReaderHelper_test isTrue)
# add_test(NAME isFalse COMMAND ReaderHelper_test isFalse)
# add_test(NAME isNull COMMAND ReaderHelper_test isNull)
# add_test(NAME matchesPathPrefix_emptyPrefixAlwaysMatchEmptyPath COMMAND ReaderHelper_test matchesPathPrefix_emptyPrefixAlwaysMatchEmptyPath)
# add_test(NAME matchesPathPrefix_emptyPrefixAlwaysMatchOneComponentPath COMMAND ReaderHelper_test matchesPathPrefix_emptyPrefixAlwaysMatchOneComponentPath)
# add_test(NAME matchesPathPrefix_emptyPrefixAlwaysMatchTwoComponentsPath COMMAND ReaderHelper_test matchesPathPrefix_emptyPrefixAlwaysMatchTwoComponentsPath)
# add_test(NAME matchesPathPrefix_stringPrefixCanMatchStringPath COMMAND ReaderHelper_test matchesPathPrefix_stringPrefixCanMatchStringPath)
# add_test(NAME matchesPathPrefix_indexPrefixCanMatchIndexPath COMMAND ReaderHelper_test matchesPathPrefix_indexPrefixCanMatchIndexPath)
# add_test(NAME matchesPathPrefix_indexPrefixNeverMatchStringPath COMMAND ReaderHelper_test matchesPathPrefix_indexPrefixNeverMatchStringPath)
# add_test(NAME matchesPathPrefix_stringPrefixNeverMatchIndexPath COMMAND ReaderHelper_test matchesPathPrefix_stringPrefixNeverMatchIndexPath)
# add_test(NAME matchesPathPrefix_stringAndIndexPrefixCanMatchStringAndIndexPath COMMAND ReaderHelper_test matchesPathPrefix_stringAndIndexPrefixCanMatchStringAndIndexPath)
# add_test(NAME matchesPathPrefix_indexAndStringPrefixCanMatchIndexAndStringPath COMMAND ReaderHelper_test matchesPathPrefix_indexAndStringPrefixCanMatchIndexAndStringPath)
# add_test(NAME matchesPathPrefix_OneComponentPrefixNeverMatchEmptyPath COMMAND ReaderHelper_test matchesPathPrefix_OneComponentPrefixNeverMatchEmptyPath)
# add_test(NAME matchesPathPrefix_TwoComponentsPrefixNeverMatchOneComponentsPath COMMAND ReaderHelper_test matchesPathPrefix_TwoComponentsPrefixNeverMatchOneComponentsPath)
# add_test(NAME matchesPathPrefix_initializerListOverload COMMAND ReaderHelper_test matchesPathPrefix_initializerListOverload)
# add_test(NAME matchesExactPath_neverMatchIfLengthMismatch COMMAND ReaderHelper_test matchesExactPath_neverMatchIfLengthMismatch)
# add_test(NAME matchesExactPath_matchesWhenLengthAndComponentsMatch COMMAND ReaderHelper_test matchesExactPath_matchesWhenLengthAndComponentsMatch)
# add_test(NAME matchesExactPath_notMatchWhenLengthMatchesButComponentsNotMatch COMMAND ReaderHelper_test matchesExactPath_notMatchWhenLengthMatchesButComponentsNotMatch)
# add_test(NAME matchesExactPath_initializerList COMMAND ReaderHelper_test matchesExactPath_initializerList)
# add_test(NAME forEachPathComponent COMMAND ReaderHelper_test forEachPathComponent)
